--- a/frontend/main.html
+++ b/frontend/main.html
@@ -19,7 +19,12 @@
 
       <div class="notes-header-box">
         <h3>Notas</h3>
+        <div class="search-box">
+          <input type="text" id="searchAuthor" placeholder="Buscar por autor">
+          <button id="searchBtn">Buscar</button>
+        </div>
         <p id="notesMessage" class="notes-message"></p>
+        <p id="capacityInfo" class="notes-message"></p>
       </div>
 
       <form id="noteForm" class="note-form">
